--- a/src/components/pages/dashboard/Dashboard.module.css
+++ b/src/components/pages/dashboard/Dashboard.module.css
@@ -1,6 +1,7 @@
-.div {
+.container {
     display: flex;
     background: url("../../../assets/imgs/content/background.png");
     background-size: cover;
     background-position: center;
+    height: 100%;
 }
